garde_derive_tests/tests/compile-fail/unknown_attr.stderr
error: unrecognized attribute
 --> tests/compile-fail/unknown_attr.rs:2:9
  |
2 | #[garde(unknown_attr)]
  |         ^^^^^^^^^^^^
